<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_weclome_bg"
    tools:context=".ui.welcome.WelcomeActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="42sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="0dp" />


    <ImageView
        android:layout_width="316dp"
        android:layout_height="237dp"
        android:layout_above="@+id/btnPlay"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="47dp"
        android:contentDescription="@string/play_button"
        android:src="@drawable/warofsuits1" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="263dp"
        android:layout_height="90dp"
        android:text="@string/play_button"
        android:fontFamily="@font/anton"
        android:textSize="24sp"
        android:elevation="30dp"
        android:background="@drawable/button_shape"
        android:layout_above="@id/btnRules"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/btnRules"
        android:layout_width="263dp"
        android:layout_height="90dp"
        android:text="@string/rules_button"
        android:fontFamily="@font/anton"
        android:textSize="24sp"
        android:elevation="30dp"
        android:background="@drawable/button_shape"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="73dp" />


</RelativeLayout>